<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/account"
            android:icon="@drawable/account"
            android:id="@+id/account"/>

        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/send"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/send" />

    </group>

</menu>