<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:padding="@dimen/padding_max"
    android:clickable="true"
    android:id="@+id/rl_feedback"
    android:background="@drawable/rounded_bg_primary"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/feedback"
        android:src="@drawable/feedback"
        android:id="@+id/iv_feedback"
        android:layout_marginEnd="@dimen/margin_half" />

    <com.mkg.orderfood.customviews.UbuntuTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/iv_feedback"
        android:id="@+id/utv_sub_feedback"
        android:gravity="center|start"
        android:textColor="@color/colorTextPrimary"/>

    <com.mkg.orderfood.customviews.UbuntuTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:layout_toEndOf="@+id/iv_feedback"
        android:layout_below="@+id/utv_sub_feedback" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/arrow"
        android:src="@drawable/menu_action_right"
        android:layout_alignParentEnd="true" />

</RelativeLayout>