<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_max"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/rounded_bg_primary"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:id="@+id/iv_restaurant"
            android:src="@drawable/offer_001"
            android:layout_marginEnd="16dp"
            android:layout_height="50dp" />

        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:id="@+id/res_name"
            android:layout_toEndOf="@+id/iv_restaurant"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="3dp"/>

        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_restaurant"
            android:layout_below="@+id/res_name"
            android:text="@string/restaurant_location"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="5dp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_max"
        android:gravity="center"
        android:layout_height="wrap_content">

        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_name"/>

        <include
            layout="@layout/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_cost"
            android:layout_marginStart="@dimen/margin_max"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_half"
        android:background="@color/colorTextTertiary"/>


    <com.mkg.orderfood.customviews.UbuntuTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_hint"
        android:textStyle="normal" />


</LinearLayout>