<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_max"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:id="@+id/ll_restaurant"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_half"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_marginEnd="7dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            android:transitionName="@string/restaurant_image"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:id="@+id/iv_restaurant"
                android:scaleType="fitXY"
                android:layout_height="100dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.mkg.orderfood.customviews.UbuntuTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:transitionName="@string/toolbar_title"
                android:id="@+id/utv_res_name"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/rating_fill"
                    android:scaleType="centerCrop"/>

                <com.mkg.orderfood.customviews.UbuntuTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/utv_rating"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"
                    android:text="@string/rating"/>


                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:scaleType="centerInside"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/dot_inside_a_circle"/>


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/rupee_fill"
                    android:scaleType="centerCrop"/>

                <com.mkg.orderfood.customviews.UbuntuTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"
                    android:id="@+id/utv_cost_per_person"
                    android:text="@string/cost_per_person"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/time_fill"
                    android:scaleType="centerCrop"/>

                <com.mkg.orderfood.customviews.UbuntuTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/utv_time"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/time"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/location_fill"
                    android:scaleType="centerCrop"/>

                <com.mkg.orderfood.customviews.UbuntuTextView
                    android:layout_width="match_parent"
                    android:id="@+id/utv_address"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/address"/>


            </TableRow>


            <!-- <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_marginBottom="8dp"
                 android:background="#D3D3D3"/>-->





        </LinearLayout>

    </TableRow>


    <com.mkg.orderfood.customviews.UbuntuTextView
        android:layout_width="match_parent"
        android:id="@+id/utvCuisines"
        android:maxLines="2"
        android:visibility="gone"
        android:gravity="end"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"/>



</LinearLayout>