<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/padding_max"
    android:background="@drawable/rounded_bg_primary"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/utvUsername"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:id="@+id/utvMobileNumber"
            android:paddingStart="@dimen/padding_min"
            android:paddingEnd="@dimen/padding_max" />

        <com.mkg.orderfood.customviews.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:paddingEnd="@dimen/padding_max"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingStart="@dimen/padding_min"
            android:id="@+id/utvEmailId" />


    </LinearLayout>


    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:src="@drawable/edit_outline" />


</TableRow>